--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -42,11 +42,11 @@
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="$(AspNetCoreVersion)" />
     <!-- EFCore -->
     <PackageVersion Include="EFCore.NamingConventions" Version="8.0.3" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10" />
     <PackageVersion Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
     <!-- Microsoft -->
-    <PackageVersion Include="Microsoft.Extensions.Telemetry" Version="8.9.1" />
-    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.9.1" />
+    <PackageVersion Include="Microsoft.Extensions.Telemetry" Version="8.10.0" />
+    <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="8.2.1" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery.Yarp" Version="8.2.1" />
     <!-- OpenTelemetry -->
@@ -72,7 +72,7 @@
     <PackageVersion Include="Xunit.Combinatorial" Version="1.6.24" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="FluentAssertions" Version="7.0.0-alpha.4" />
-    <PackageVersion Include="ReportGenerator" Version="5.3.10" />
+    <PackageVersion Include="ReportGenerator" Version="5.3.11" />
     <PackageVersion Include="WireMock.Net.Aspire" Version="1.6.3" />
     <!-- Duende -->
     <PackageVersion Include="Duende.BFF.Yarp" Version="2.2.0" />
@@ -81,6 +81,7 @@
     <PackageVersion Include="Scrutor" Version="5.0.1" />
     <PackageVersion Include="MediatR" Version="12.4.1" />
     <PackageVersion Include="Polly.Core" Version="8.4.2" />
+    <PackageVersion Include="Nuke.Common" Version="8.1.1" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageVersion Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
