--- a/src/Services/Ecommerce.Inventory/Ecommerce.Inventory.csproj
+++ b/src/Services/Ecommerce.Inventory/Ecommerce.Inventory.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <ItemGroup>
+    <PackageReference Include="MassTransit.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore.Server.ClientFactory" />
+    <PackageReference Include="Grpc.Tools" PrivateAssets="All" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Aspire\Ecommerce.ServiceDefaults\Ecommerce.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\BuildingBlocks\Ecommerce.EF\Ecommerce.EF.csproj" />
-    <ProjectReference Include="..\..\BuildingBlocks\Ecommerce.MassTransit\Ecommerce.MassTransit.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Ecommerce.Marten\Ecommerce.Marten.csproj" />
   </ItemGroup>
 
 </Project>
