--- a/src/Services/Ecommerce.Inventory/Properties/launchSettings.json
+++ b/src/Services/Ecommerce.Inventory/Properties/launchSettings.json
@@ -8,7 +8,8 @@
       "launchUrl": "",
       "applicationUrl": "http://localhost:5254",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SchemaName": "stock_history"
       }
     },
     "https": {
@@ -18,7 +19,8 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:7104;http://localhost:5254",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SchemaName": "stock_history"
       }
     }
   }
