Add AutoBogus package to Ecommerce.Catalog.UnitTests.csproj and Directory.Packages.props

--- a/tests/Ecommerce.Catalog.UnitTests/Ecommerce.Catalog.UnitTests.csproj
+++ b/tests/Ecommerce.Catalog.UnitTests/Ecommerce.Catalog.UnitTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="coverlet.collector" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
+    <PackageReference Include="AutoBogus" />
     <PackageReference Include="ReportGenerator" />
     <PackageReference Include="FluentAssertions" />
   </ItemGroup>
