Add Ecommerce.Payment and Ecommerce.Shipment services
- Added Ecommerce.Payment service with Program.cs, appsettings.json, and appsettings.Development.json files.
- Added Ecommerce.Shipment service with Program.cs, appsettings.json, and appsettings.Development.json files.
- Added launchSettings.json files for Ecommerce.Payment and Ecommerce.Shipment services.
- Updated Ecommerce.AppHost to include references to Ecommerce.Payment and Ecommerce.Shipment services.
- Updated Ecommerce.AppHost Program.cs to configure and add references to the new services.
- Added Ecommerce.Payment.csproj and Ecommerce.Shipment.csproj files.
- Added Telemetry.cs file to Ecommerce.Marten.OpenTelemetry namespace.
- Updated Extensions.cs in Ecommerce.Marten namespace to add OpenTelemetry metrics and tracing.
- Updated Extensions.cs in Ecommerce.Inventory.Extensions namespace to change access modifier to internal.
- Updated ServiceName.cs in Ecommerce.Constant namespace to add constants for Shipment and Payment services.

--- a/src/Aspire/Ecommerce.AppHost/Ecommerce.AppHost.csproj
+++ b/src/Aspire/Ecommerce.AppHost/Ecommerce.AppHost.csproj
@@ -33,8 +33,10 @@
     <ProjectReference Include="..\..\Services\Ecommerce.Media\Ecommerce.Media.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Notification\Ecommerce.Notification.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Order\Ecommerce.Order.csproj" />
+    <ProjectReference Include="..\..\Services\Ecommerce.Payment\Ecommerce.Payment.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Promotion\Ecommerce.Promotion.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Rating\Ecommerce.Rating.csproj" />
+    <ProjectReference Include="..\..\Services\Ecommerce.Shipment\Ecommerce.Shipment.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Tax\Ecommerce.Tax.csproj" />
     <ProjectReference Include="..\..\Services\Ecommerce.Webhook\Ecommerce.Webhook.csproj" />
   </ItemGroup>
