Add CreateSupplierCommand record for Ecommerce.Inventory.Suppliers.Create feature

--- a/src/Services/Ecommerce.Location/Ecommerce.Location.csproj
+++ b/src/Services/Ecommerce.Location/Ecommerce.Location.csproj
@@ -1,4 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <ItemGroup>
+    <PackageReference Include="MassTransit.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Aspire\Ecommerce.ServiceDefaults\Ecommerce.ServiceDefaults.csproj" />
