Add CountryDto record for Ecommerce.Location.Countries feature

--- a/src/Services/Ecommerce.Location/appsettings.Development.json
+++ b/src/Services/Ecommerce.Location/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenApi": {
+    "Auth": {
+      "AppName": "Location API",
+      "ClientId": "locationswaggerui",
+      "ClientSecret": "secret"
+    },
+    "Document": {
+      "Title": "Location API",
+      "Description": "An Ecommerce Location API"
+    }
   }
 }
