Add Tax Service

--- a/src/Services/Ecommerce.Tax/appsettings.Development.json
+++ b/src/Services/Ecommerce.Tax/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
+  "Identity": {
+    "Audience": "tax",
+    "Scopes": {
+      "tax": "Tax API"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "OpenApi": {
+    "Auth": {
+      "AppName": "Tax API",
+      "ClientId": "taxswaggerui",
+      "ClientSecret": "secret"
+    },
+    "Document": {
+      "Title": "Tax API",
+      "Description": "An Ecommerce Tax API"
     }
   }
 }
