--- a/src/Services/Ecommerce.Tax/Ecommerce.Tax.csproj
+++ b/src/Services/Ecommerce.Tax/Ecommerce.Tax.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Aspire\Ecommerce.ServiceDefaults\Ecommerce.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\BuildingBlocks\Ecommerce.EF\Ecommerce.EF.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\Ecommerce.MassTransit\Ecommerce.MassTransit.csproj" />
   </ItemGroup>
 
 </Project>
